# agentic-uv

./: .gitignore  .pre-commit-config.yaml  CONTRIBUTING.md  Makefile  README.md  cookiecutter.json  mkdocs.yml  pyproject.toml
.claude/: CLAUDE.md
.claude/agents/: design-sync.md  integration-test-reviewer.md  quality-fixer.md  task-executor.md  work-planner.md
.claude/rules/: agent-interaction.md  commit-guidelines.md  contributing.md
.claude/skills/lint-project/: SKILL.md
.claude/skills/subagents-orchestration-guide/: SKILL.md
.copilot/: CLAUDE.md
.copilot/agents/: acceptance-test-generator.md  document-reviewer.md  prd-creator.md  requirement-analyzer.md  task-decomposer.md  technical-designer.md
.copilot/rules/: agent-interaction.md  best-practices.md  code-style.md  commit-guidelines.md  contributing.md  testing.md
.copilot/skills/subagents-orchestration-guide/: SKILL.md
.devcontainer/: devcontainer.json
.github/: copilot-instructions.md
.github/actions/setup-python-env/: action.yml
.github/workflows/: update-dependencies.yml
agentic_uv/cicd/: __init__.py  cli.py  config.py  updaters.py
docs/: index.md  prompt_arguments.md  tutorial.md
hooks/: post_gen_project.py
tests/: test_cicd.py  test_combinations.py
{{cookiecutter.project_name}}/: .pre-commit-config.yaml  Makefile  README.md  mkdocs.yml  pyproject.toml  tox.ini
{{cookiecutter.project_name}}/.claude/: CLAUDE.md
{{cookiecutter.project_name}}/.claude/rules/: best-practices.md  commit-guidelines.md  deployment.md  error-handling.md  implementation-strategy.md  skills.md  testing.md
{{cookiecutter.project_name}}/.claude/skills/check-project/: SKILL.md
{{cookiecutter.project_name}}/.claude/skills/post-change-validation/: SKILL.md
{{cookiecutter.project_name}}/.claude/skills/test-project/: SKILL.md
{{cookiecutter.project_name}}/.copilot/: CLAUDE.md
{{cookiecutter.project_name}}/.copilot/rules/: agent-interaction.md  implementation-strategy.md  skills.md
{{cookiecutter.project_name}}/.copilot/skills/test-project/: SKILL.md
{{cookiecutter.project_name}}/.github/actions/setup-python-env/: action.yml
{{cookiecutter.project_name}}/.github/workflows/: main.yml  security-audit.yml
{{cookiecutter.project_name}}/tests/: test_foo.py  test_properties.py
{{cookiecutter.project_name}}/tests/integration/: test_integration.py
