[project]
name = "{{cookiecutter.project_name}}"
version = "0.1.0"
description = "{{cookiecutter.project_description}}"
authors = [{ name = "{{cookiecutter.author}}", email = "{{cookiecutter.email}}" }]
readme = "README.md"
keywords = ['python']
requires-python = ">=3.10,<4.0"
classifiers = [
    "Intended Audience :: Developers",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Topic :: Software Development :: Libraries :: Python Modules",
]

[project.urls]
Homepage = "https://{{cookiecutter.author_github_handle}}.github.io/{{cookiecutter.project_name}}/"
Repository = "https://github.com/{{cookiecutter.author_github_handle}}/{{cookiecutter.project_name}}"
Documentation = "https://{{cookiecutter.author_github_handle}}.github.io/{{cookiecutter.project_name}}/"

[dependency-groups]
dev = [
    "pytest>=9.0.2",
    "pytest-cov>=7.0.0",
    "pytest-xdist>=3.6.0",
    "pre-commit>=4.5.1",
    "tox-uv>=1.29.0",
    {% if cookiecutter.deptry == 'y' %}"deptry>=0.24.0",{% endif %}
    {% if cookiecutter.type_checker == "mypy" -%}
        "mypy>=1.19.1",
    {%- elif cookiecutter.type_checker == "ty" -%}
        "ty>=0.0.14",
    {%- endif %}
    "ruff>=0.14.14",
    "bandit[toml]>=1.8.0",
    "pip-audit>=2.9.0",
    "vulture>=2.14",
    "hypothesis>=6.131.0",
    "mutmut>=3.3.0",
    {% if cookiecutter.mkdocs == 'y' %}"mkdocs>=1.6.1",
    "mkdocs-material>=9.7.1",
    "mkdocstrings[python]>=1.0.2",{% endif %}
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

{% if cookiecutter.layout == "src" -%}
[tool.hatch.build.targets.wheel]
packages = ["src/{{cookiecutter.project_slug}}"]
{%- else -%}
[tool.hatch.build.targets.wheel]
packages = ["{{cookiecutter.project_slug}}"]
{%- endif %}

{% if cookiecutter.type_checker == "mypy" -%}
[tool.mypy]
files = [
    {%- if cookiecutter.layout == "src" -%}
    "src"
    {%- else -%}
    "{{cookiecutter.project_slug}}"
    {%- endif -%}
]
disallow_untyped_defs = true
disallow_any_unimported = true
disallow_incomplete_defs = true
no_implicit_optional = true
check_untyped_defs = true
warn_return_any = true
warn_unused_ignores = true
warn_unused_configs = true
warn_redundant_casts = true
warn_unreachable = true
show_error_codes = true
show_error_context = true
pretty = true
{%- else -%}
[tool.ty.environment]
python = "./.venv"
python-version = "3.10"
{%- endif %}

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "--strict-markers --disable-warnings"
markers = [
    "coverage: marks tests as critical for coverage (deselect with '-m \"not coverage\"')",
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
    "integration: marks integration tests (deselect with '-m \"not integration\"')",
    "property: marks property-based tests using Hypothesis (deselect with '-m \"not property\"')",
]

[tool.ruff]
target-version = "py310"
line-length = 120
fix = true

[tool.ruff.lint]
select = [
    # flake8-2020
    "YTT",
    # flake8-bandit
    "S",
    # flake8-bugbear
    "B",
    # flake8-builtins
    "A",
    # flake8-comprehensions
    "C4",
    # flake8-debugger
    "T10",
    # flake8-pie
    "PIE",
    # flake8-simplify
    "SIM",
    # isort
    "I",
    # mccabe
    "C90",
    # pycodestyle
    "E", "W",
    # pyflakes
    "F",
    # pygrep-hooks
    "PGH",
    # pyupgrade
    "UP",
    # ruff
    "RUF",
    # tryceratops
    "TRY",
]
ignore = [
    # LineTooLong
    "E501",
    # DoNotAssignLambda
    "E731",
]

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["S101"]

[tool.ruff.format]
preview = true

[tool.bandit]
exclude_dirs = ["tests", "venv"]

{% if cookiecutter.codecov == "y" -%}
[tool.coverage.report]
skip_empty = true
fail_under = 80
precision = 2
show_missing = true
skip_covered = false

[tool.coverage.run]
branch = true
source = [
    {%- if cookiecutter.layout == "src" -%}
    "src"
    {%- else -%}
    "{{cookiecutter.project_slug}}"
    {%- endif -%}
]

[tool.coverage.html]
directory = "coverage_html_report"
{% endif %}
